# RoadMasterAPI

./: .gitignore  Cargo.toml  Makefile  README.md
migrations/: 20230123163655_init.up.sql  20231115191643_roadmaster.down.sql  20231115191643_roadmaster.up.sql
src/: UserHandler.rs  handler.rs  helper.rs  main.rs  model.rs  user_handler.rs
src/database/: mod.rs  results.rs  user.rs
src/http/: countries_handler.rs  history_handler.rs  mod.rs  question_handler.rs  tips_handler.rs  user_handler.rs
src/model/: api_response.rs  country.rs  mod.rs  question.rs  result.rs  tips.rs  user.rs
tests/: unit_test.rs
