[package]
name = "roadmaster_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.7.4", features = [
    "runtime-async-std-native-tls",
    "mysql",
    "chrono",
    "uuid",
] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
argon2 = { version = "0.5.2" }
bcrypt = { version = "0.15.1" }
regex = { version = "1.7.1" }
rand = "0.8.5"
